Fix menu not showing

--- a/src/style.css
+++ b/src/style.css
@@ -128,6 +128,7 @@ body {
 
 .navbar-m-links-visible {
     display: grid;
+    z-index: 50;
 }
 
 .navbar-m-links a {
